fix issues with flickering

--- a/src/HoverSlideshow.css
+++ b/src/HoverSlideshow.css
@@ -4,4 +4,11 @@
 	background-repeat: no-repeat;
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
+	overflow: hidden;
+	position: relative;
+}
+
+.innerContainer {
+	position: relative;
+	white-space: pre;
 }
